# LogRek

./: .gitignore  Dockerfile  README.md  lets_see.py.ipynb  main.py  pyproject.toml
ml_from_scratch/linear/classification/: logistic.py
