[tool.poetry]
name = "ml-from-scratch"
version = "0.1.0"
description = ""
authors = ["Rama <ramareksotinoyo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
